syntax = "proto3";

package nodevoto.v1;

message VotingResult {
    string Shortcode = 1;
    int32 Votes = 2;
}

message VoteRequest {
}

message VoteResponse {
}

message ResultsRequest {
}

message ResultsResponse {
    repeated VotingResult results = 1;
}

service VotingService {
    rpc Vote1027kiisfmFingerGunWangoTango (VoteRequest) returns (VoteResponse);
    rpc VoteAfv (VoteRequest) returns (VoteResponse);
    rpc VoteAirplaneIAmSeriousSurelyYouCantBe (VoteRequest) returns (VoteResponse);
    rpc VoteAlrokerAlRoker (VoteRequest) returns (VoteResponse);
    rpc VoteAngryMondayWorking (VoteRequest) returns (VoteResponse);
    rpc VoteAnimationLol (VoteRequest) returns (VoteResponse);
    rpc VoteArtCuteOkay (VoteRequest) returns (VoteResponse);
    rpc VoteBadPugPugPugsAhahah (VoteRequest) returns (VoteResponse);
    rpc VoteBestfriends (VoteRequest) returns (VoteResponse);
    rpc VoteBestfriendsCatReaction (VoteRequest) returns (VoteResponse);
    rpc VoteBigbrothercaWtfWhat (VoteRequest) returns (VoteResponse);
    rpc VoteBojackhorseman (VoteRequest) returns (VoteResponse);
    rpc VoteCatGoodbyeDone (VoteRequest) returns (VoteResponse);
    rpc VoteCatKittenSleep (VoteRequest) returns (VoteResponse);
    rpc VoteCatOfficeWorking (VoteRequest) returns (VoteResponse);
    rpc VoteCbsCheersNcisLosAngeles (VoteRequest) returns (VoteResponse);
    rpc VoteChescaleigh (VoteRequest) returns (VoteResponse);
    rpc VoteComedycentralWorkaholicsSmile (VoteRequest) returns (VoteResponse);
    rpc VoteDanceBeyonce (VoteRequest) returns (VoteResponse);
    rpc VoteDanceDancingFunny (VoteRequest) returns (VoteResponse);
    rpc VoteDavidHasselhoffFunnyCrazy (VoteRequest) returns (VoteResponse);
    rpc VoteDogSmileWork (VoteRequest) returns (VoteResponse);
    rpc VoteFacethetruthtv (VoteRequest) returns (VoteResponse);
    rpc VoteFoxsearchlightSuperTroopersJayChandrasekhar (VoteRequest) returns (VoteResponse);
    rpc VoteFunnyGifArtistG (VoteRequest) returns (VoteResponse);
    rpc VoteFunnySmileText (VoteRequest) returns (VoteResponse);
    rpc VoteGarfieldCatCoffee (VoteRequest) returns (VoteResponse);
    rpc VoteGothamFoxtvFoxBroadcasting (VoteRequest) returns (VoteResponse);
    rpc VoteHallmarkmovieTheDisappearingGameAuroraTeagardenMysteries (VoteRequest) returns (VoteResponse);
    rpc VoteHappyExcitedYes (VoteRequest) returns (VoteResponse);
    rpc VoteHappyFunExcited (VoteRequest) returns (VoteResponse);
    rpc VoteHeyviolet (VoteRequest) returns (VoteResponse);
    rpc VoteHyperrpgTwitchHyperRpg (VoteRequest) returns (VoteResponse);
    rpc VoteJaydenbartelsJaydenBartels (VoteRequest) returns (VoteResponse);
    rpc VoteJimgaffiganJimGaffigan (VoteRequest) returns (VoteResponse);
    rpc VoteJustviralnetFunnyKid (VoteRequest) returns (VoteResponse);
    rpc VoteKawaiiDumpsterFire (VoteRequest) returns (VoteResponse);
    rpc VoteLego (VoteRequest) returns (VoteResponse);
    rpc VoteLildickyLilDicky (VoteRequest) returns (VoteResponse);
    rpc VoteLoveArtCute (VoteRequest) returns (VoteResponse);
    rpc VoteLoveCuteGirl (VoteRequest) returns (VoteResponse);
    rpc VoteLoveKissHeart (VoteRequest) returns (VoteResponse);
    rpc VoteMlbFanRoyalsDances (VoteRequest) returns (VoteResponse);
    rpc VoteMolangofficialpageSadTiredBummer (VoteRequest) returns (VoteResponse);
    rpc VoteMorningGoodVibes (VoteRequest) returns (VoteResponse);
    rpc VoteMostexpensivestViceland2ChainzMostExpensivest (VoteRequest) returns (VoteResponse);
    rpc VoteMusicchoiceCuteExcited (VoteRequest) returns (VoteResponse);
    rpc VoteMusicchoiceDinahJaneDinahjane (VoteRequest) returns (VoteResponse);
    rpc VoteNatgeowildPupparazziPuppyPottyFace (VoteRequest) returns (VoteResponse);
    rpc VoteNehumanesocietyCatCats (VoteRequest) returns (VoteResponse);
    rpc VoteNetflixDinosaurCupcakeCupcakedino (VoteRequest) returns (VoteResponse);
    rpc VoteNewGirlNewGirlJessDayNewgirl (VoteRequest) returns (VoteResponse);
    rpc VoteNext (VoteRequest) returns (VoteResponse);
    rpc VoteNfl (VoteRequest) returns (VoteResponse);
    rpc VoteNflSmithTrequanTreQuan (VoteRequest) returns (VoteResponse);
    rpc VoteOscarsAcademyAwards1997 (VoteRequest) returns (VoteResponse);
    rpc VoteOxygenmediaSideEyeNoYouDidntDeitrickHaddon (VoteRequest) returns (VoteResponse);
    rpc VotePokemonSchoolCollege (VoteRequest) returns (VoteResponse);
    rpc VoteReactionArethaFranklin (VoteRequest) returns (VoteResponse);
    rpc VoteReactionMood (VoteRequest) returns (VoteResponse);
    rpc VoteRoberteblackmonHomerSimpsonWtf (VoteRequest) returns (VoteResponse);
    rpc VoteRosannapansinoDogHello (VoteRequest) returns (VoteResponse);
    rpc VoteRtl5Rtl5HntmHollandsNextTopModel (VoteRequest) returns (VoteResponse);
    rpc VoteSandiegozoo (VoteRequest) returns (VoteResponse);
    rpc VoteSiliconvalleyhboHboTech (VoteRequest) returns (VoteResponse);
    rpc VoteSjearthquakesMlsSanJoseEarthquakesQuakes (VoteRequest) returns (VoteResponse);
    rpc VoteSlothSlothsSlothilda (VoteRequest) returns (VoteResponse);
    rpc VoteSpongebobCartoonNickelodeonThumbs (VoteRequest) returns (VoteResponse);
    rpc VoteStudiosoriginals (VoteRequest) returns (VoteResponse);
    rpc VoteStudiosoriginalsValentinesDayHappy (VoteRequest) returns (VoteResponse);
    rpc VoteSwizzbeatzPoisonSwizzBeatzPistolOnMySide (VoteRequest) returns (VoteResponse);
    rpc VoteSza (VoteRequest) returns (VoteResponse);
    rpc VoteTeamcocoHttptoteamcococom2znbupz (VoteRequest) returns (VoteResponse);
    rpc VoteThanksThankyouOmerismos (VoteRequest) returns (VoteResponse);
    rpc VoteThebacheloretteDanceKiss (VoteRequest) returns (VoteResponse);
    rpc VoteThephizzogs (VoteRequest) returns (VoteResponse);
    rpc VoteTheXFiles (VoteRequest) returns (VoteResponse);
    rpc VoteThisisgiphyReactionAudience (VoteRequest) returns (VoteResponse);
    rpc VoteTommywiseauFootballSuperBowl (VoteRequest) returns (VoteResponse);
    rpc VoteUniversityofkansasCoolSunglasses (VoteRequest) returns (VoteResponse);
    rpc VoteUssoccerFunnyLol (VoteRequest) returns (VoteResponse);
    rpc VoteVhsPositiveVhspositive (VoteRequest) returns (VoteResponse);
    rpc VoteWhatthefashionLoveYesYas (VoteRequest) returns (VoteResponse);
    rpc VoteWinWinnerRobdougie (VoteRequest) returns (VoteResponse);
    rpc VoteYes100Agree (VoteRequest) returns (VoteResponse);
    rpc Results (ResultsRequest) returns (ResultsResponse);
}
